# eHaz-Model-Viewer

./: .gitignore  CMakeLists.txt  compile_commands.json
assets/: Sonic.glb  animation.vert  shader.frag  shader.vert  test.hzmdl
include/: Camera.hpp  FileSystem.hpp  UI.hpp
src/: UI.cpp  main.cpp
